--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/5b191a7148.js" crossorigin="anonymous"></script>
     <title>MemeMC</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body class="relative min-h-screen flex flex-col">
     <div class="absolute inset-0 z-0 bg-cover bg-center" style="background-image: url('images/bg.png');">
