--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="w-full max-w-lg text-center">
             <img src="images/logo.png" alt="Logo" class="w-3/4 max-w-[20rem] h-auto object-contain mx-auto">
             <div class="flex space-x-8 justify-center mt-4 text-2xl sm:text-3xl md:text-4xl text-amber-600">
-                <a href="https://go.mememc.club/discord" target="_blank"><i class="fa-brands fa-discord"></i></a>
-                <a href="https://store.mememc.club/" target="_blank"><i class="fa-solid fa-store"></i></a>
-                <a href="/staff.html" target="_blank"><i class="fa-solid fa-check-to-slot"></i></a>
-                <a href="/rules.html" target="_blank"><i class="fa-solid fa-book"></i></a>
+                <a href="https://go.mememc.club/discord"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://store.mememc.club/"><i class="fa-solid fa-store"></i></a>
+                <a href="/staff.html"><i class="fa-solid fa-check-to-slot"></i></a>
+                <a href="/rules.html"><i class="fa-solid fa-book"></i></a>
             </div>
         </div>
     </div>
