--- a/rules.html
+++ b/rules.html
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <h1 class="nav-title">MemeMC</h1>
             <ul class="nav-links">
-                <li><a href="https://mrsbourn.github.io/mememcweb">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="rules.html">Rules</a></li>
                 <li><a href="staff.html">Staff Team</a></li>
             </ul>
