--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="MemeMC">
+    <meta name="description" content="MemeMC | dsc.gg/mememc">
+    <meta name="keywords" content="Minecraft,PvP,1.21,Retro,Meme">
+    <meta name="author" content="MemeMC">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/5b191a7148.js" crossorigin="anonymous"></script>
     <title>MemeMC</title>
