--- a/rules.html
+++ b/rules.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MemeMC | Rules</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <div class="nav-container">
-            <h1 class="nav-title">MemeMC</h1>
+            <img src="images/logo_64.png" alt="Logo" class="nav-title">
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="rules.html">Rules</a></li>
                 <li><a href="staff.html">Staff Team</a></li>
+                <li><a href="partners.html">Partners</a></li>
             </ul>
         </div>
     </nav>
