--- a/partners.html
+++ b/partners.html
@@ -28,9 +28,9 @@
             <h3>🌟 Partnered Servers 🌟</h3>
             <div class="partner-list">
                 <div class="partner">
-                    <h4>CrownCraft</h4>
-                    <p><strong>IP Address:</strong> mc.crowncraft.me</p>
-                    <p><strong>Discord:</strong> <a href="http://discord.gg/" target="_blank">CrownCraft's Discord</a></p>
+                    <h4>------</h4>
+                    <p><strong>IP Address:</strong> -----</p>
+                    <p><strong>Discord:</strong> <a href="http://discord.gg/" target="_blank">-----'s Discord</a></p>
                     <p>A fun-filled survival server with friendly players, staff, and exciting events!</p>
                 </div>
                 <div class="partner">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <h3>🤝 Become a Partner 🤝</h3>
-            <p>If you're interested in partnering with us, fill out our partnership application <a href="https://forms.gle/L4cuqEEdt2BbGcDy9">here</a>.</p>
+            <p>If you're interested in partnering with us, fill out our partnership application <a href="https://forms.gle/z3Rcfmw1s1RJt43e8">here</a>.</p>
         </main>
         <footer>
             <p>&copy; 2024 MemeMC. All rights reserved.</p>
