--- a/partners.html
+++ b/partners.html
@@ -28,16 +28,16 @@
             <h3>🌟 Partnered Servers 🌟</h3>
             <div class="partner-list">
                 <div class="partner">
-                    <h4>------</h4>
-                    <p><strong>IP Address:</strong> -----</p>
-                    <p><strong>Discord:</strong> <a href="http://discord.gg/" target="_blank">-----'s Discord</a></p>
+                    <h4>CrownCraft</h4>
+                    <p><strong>IP Address:</strong> mc.crowncraft.me</p>
+                    <p><strong>Discord:</strong> <a href="https://discord.gg/kcFFVRS4C3" target="_blank">CrownCraft's Discord</a></p>
                     <p>A fun-filled survival server with friendly players, staff, and exciting events!</p>
                 </div>
                 <div class="partner">
                     <h4>You could be here!</h4>
                     <p><strong>IP Address:</strong> play.yourserver.here</p>
-                    <p><strong>Website:</strong> <a href="https://dsc.gg/mememc" target="_blank">Your Discord</a></p>
-                    <p>Custom-tailored description on <strong>YOUR</strong> server! Fill out the application below to become a partner!</p>
+                    <p><strong>Discord: </strong><a href="https://dsc.gg/mememc" target="_blank">Your Discord</a></p>
+                    <p>Custom-tailored description on <strong>YOUR</strong> server/service! Fill out the application below to become a partner!</p>
                 </div>
             </div>
             <h3>🤝 Become a Partner 🤝</h3>
