--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MemeMC | Staff Team</title>
+    <title>MemeMC | Staff Team</title> 
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="staff.css">
 </head>
 <body>
