--- a/partners.html
+++ b/partners.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MemeMC | Partners</title>
+    <title>MemeMC | Rules</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="partner.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -21,27 +21,20 @@
     </nav>
     <div class="container">
         <header>
-            <h2>🤝 Welcome to Our Partners Page! 🤝</h2>
-            <p>Explore our fantastic partners below:</p>
+            <h2>🏰 Welcome to MemeMC! ⚔</h2>
+            <p>Please read and adhere to the following rules:</p>
         </header>
         <main>
-            <h3>🌟 Partnered Servers 🌟</h3>
-            <div class="partner-list">
-                <div class="partner">
-                    <h4>CrownCraft</h4>
-                    <p><strong>IP Address:</strong> mc.crowncraft.me</p>
-                    <p><strong>Discord:</strong> <a href="https://discord.gg/kcFFVRS4C3" target="_blank">CrownCraft's Discord</a></p>
-                    <p>A fun-filled survival server with friendly players, staff, and exciting events!</p>
-                </div>
-                <div class="partner">
-                    <h4>You could be here!</h4>
-                    <p><strong>IP Address:</strong> play.yourserver.here</p>
-                    <p><strong>Discord: </strong><a href="https://dsc.gg/mememc" target="_blank">Your Discord</a></p>
-                    <p>Custom-tailored description on <strong>YOUR</strong> server/service! Fill out the application below to become a partner!</p>
-                </div>
-            </div>
-            <h3>🤝 Become a Partner 🤝</h3>
-            <p>If you're interested in partnering with us, fill out our partnership application <a href="https://forms.gle/z3Rcfmw1s1RJt43e8">here</a>.</p>
+            <h3>🌟 Server Rules 🌟</h3>
+            <ol class="rules-list">
+                <li>No griefing: Respect others' builds and creations.</li>
+                <li>No cheating: Use of hacks or unfair mods is prohibited.</li>
+                <li>Be respectful: Treat all players with kindness.</li>
+                <li>No spamming: Avoid repeating messages in chat.</li>
+                <li>Use appropriate language: Keep chat family-friendly.</li>
+                <li>Follow admin instructions: Listen to server staff.</li>
+                <li>Have fun: Enjoy the game and community!</li>
+            </ol>
         </main>
         <footer>
             <p>&copy; 2024 MemeMC. All rights reserved.</p>
