--- a/staff.html
+++ b/staff.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MemeMC | Staff Team</title> 
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="staff.css">
+    <link rel="stylesheet" href="staffs.css">
 </head>
 <body>
     <nav>
