--- a/rules.html
+++ b/rules.html
@@ -16,6 +16,7 @@
                 <li><a href="rules.html">Rules</a></li>
                 <li><a href="staff.html">Staff Team</a></li>
                 <li><a href="partners.html">Partners</a></li>
+                <li><a href="https://store.mememc.club/">Partners</a></li>
             </ul>
         </div>
     </nav>
