--- a/staff.html
+++ b/staff.html
@@ -30,15 +30,15 @@
         <main>
             <section class="staff-list">
                 <div class="staff-member">
-                    <h3>Owner - Meme</h3>
+                    <h3>👑 Founder - Meme</h3>
                     <p>Meme is one of the two owners, ensuring everything runs perfectly and that players have a great experience!</p>
                 </div>
                 <div class="staff-member">
-                    <h3>Owner - Retro</h3>
+                    <h3>👑 Founder - Retro</h3>
                     <p>Retro, the second owner, helps maintain a seamless experience for players!</p>
                 </div>
                 <div class="staff-member">
-                    <h3>Admin - Aspect</h3>
+                    <h3>Owner - Aspect</h3>
                     <p>Aspect assists with player issues and keeps the chat friendly and fun.</p>
                 </div>
                 <div class="staff-member">
