--- a/staff.html
+++ b/staff.html
@@ -31,11 +31,11 @@
             <section class="staff-list">
                 <div class="staff-member">
                     <h3>👑 Founder - Meme</h3>
-                    <p>Meme is one of the two owners, ensuring everything runs perfectly and that players have a great experience!</p>
+                    <p>Meme is one of the two founders, ensuring everything runs perfectly and that players have a great experience!</p>
                 </div>
                 <div class="staff-member">
                     <h3>👑 Founder - Retro</h3>
-                    <p>Retro, the second owner, helps maintain a seamless experience for players!</p>
+                    <p>Retro, the second founder, helps maintain a seamless player experience!</p>
                 </div>
                 <div class="staff-member">
                     <h3>Owner - Aspect</h3>
