--- a/game/index.html
+++ b/game/index.html
@@ -7,13 +7,22 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Unblocked Games</h1>
+    <h1>Games</h1>
     <div class="game-gallery">
         <div class="game-card" onclick="loadGame('game1')">
-            <h3>Game 1</h3>
+            <h3>Top Speed Racing 3D</h3>
         </div>
         <div class="game-card" onclick="loadGame('game2')">
-            <h3>Game 2</h3>
+            <h3>Drift Hunters</h3>
+        </div>
+        <div class="game-card" onclick="loadGame('game3')">
+            <h3>Tiny Fishing</h3>
+        </div>
+        <div class="game-card" onclick="loadGame('game4')">
+            <h3>Skibidi Shooter</h3>
+        </div>
+        <div class="game-card" onclick="loadGame('game5')">
+            <h3>OvO</h3>
         </div>
         <!-- Add more games here -->
     </div>
