--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
             </div>
         </div>
     </div>
-    <footer>
-        <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://namemc.com/server/mememc.club/embed" width="728" height="90"></iframe>
-    <footer class="bg-gray-900 opacity-75 text-white text-center z-0">
+    <footer class="bg-gray-900 opacity-75 text-white text-center py-4">
+        <iframe style="width:728px; height:90px; max-width:100%; border:none; display:block; margin:auto;" 
+                src="https://namemc.com/server/mememc.club/embed" 
+                width="728" 
+                height="90">
+        </iframe>
     </footer>
 </body>
 </html>
