--- a/staff.html
+++ b/staff.html
@@ -38,8 +38,8 @@
                     <p>Retro, the second founder, helps maintain a seamless player experience!</p>
                 </div>
                 <div class="staff-member">
-                    <h3>Owner - Aspect</h3>
-                    <p>Aspect assists with player issues and keeps the chat friendly and fun.</p>
+                    <h3>Aids - Aidspect</h3>
+                    <p>Aidspect assists with player issues and keeps the chat friendly and fun.</p>
                 </div>
                 <div class="staff-member">
                     <h3>Admin - Theonepufferfish</h3>
