--- a/game/index.html
+++ b/game/index.html
@@ -15,6 +15,9 @@
         <div class="game-card" onclick="loadGame('game2')">
             <h3>Drift Hunters</h3>
         </div>
+        <div class="game-card" onclick="loadGame('game6')">
+            <h3>Russian Car Driver</h3>
+        </div>
         <div class="game-card" onclick="loadGame('game3')">
             <h3>Tiny Fishing</h3>
         </div>
