--- a/game/index.html
+++ b/game/index.html
@@ -10,10 +10,10 @@
     <h1>Games</h1>
     <div class="game-gallery">
         <div class="game-card" onclick="loadGame('game1')">
-            <h3>Top Speed Racing 3D</h3>
+            <h3>Connect Four</h3>
         </div>
         <div class="game-card" onclick="loadGame('game2')">
-            <h3>Drift Hunters</h3>
+            <h3>Drift Hunters (trying fix)</h3>
         </div>
         <div class="game-card" onclick="loadGame('game6')">
             <h3>Russian Car Driver</h3>
