--- a/game/index.html
+++ b/game/index.html
@@ -13,7 +13,7 @@
             <h3>Connect Four</h3>
         </div>
         <div class="game-card" onclick="loadGame('game2')">
-            <h3>Drift Hunters (trying fix)</h3>
+            <h3>Drift Hunters</h3>
         </div>
         <div class="game-card" onclick="loadGame('game6')">
             <h3>Russian Car Driver</h3>
@@ -27,6 +27,8 @@
         <div class="game-card" onclick="loadGame('game5')">
             <h3>OvO</h3>
         </div>
+        <div class="game-card" onclick="loadGame('game6')">
+            <h3>Stick Merge</h3>
         <!-- Add more games here -->
     </div>
     <script src="js/main.js"></script>
