--- a/game/games.html
+++ b/game/games.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math | 39 x 1592</title>
+    <title>MemeMC | Play Game</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="game-container">
         <iframe id="gameFrame" src="" frameborder="0" allowfullscreen></iframe>
     </div>
-    <button onclick="goBack()">Back to Games List</button>
+    <button class="back-button" onclick="goBack()">⬅️ Back to Games List</button>
     <script src="js/games.js"></script>
 </body>
 </html>
