--- a/game/index.html
+++ b/game/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Games</h1>
+    <div class="header">
+        <h1>🎮 MemeMC Game Hub</h1>
+    </div>
     <div class="game-gallery">
         <div class="game-card" onclick="loadGame('game1')">
             <h3>Connect Four</h3>
         </div>
         <div class="game-card" onclick="loadGame('game2')">
             <h3>Drift Hunters</h3>
-        </div>
-        <div class="game-card" onclick="loadGame('game6')">
-            <h3>Russian Car Driver</h3>
         </div>
         <div class="game-card" onclick="loadGame('game3')">
             <h3>Tiny Fishing</h3>
@@ -29,8 +28,11 @@
         </div>
         <div class="game-card" onclick="loadGame('game6')">
             <h3>Stick Merge</h3>
-        <!-- Add more games here -->
+        </div>
     </div>
+    <footer>
+        <p>© 2024 MemeMC. All Rights Reserved.</p>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
