--- a/game/index.html
+++ b/game/index.html
@@ -9,32 +9,26 @@
 </head>
 <body>
     <div class="header">
-        <h1>🎮 MemeMC Game Hub</h1>
-        <p>Choose a game and have fun!</p>
+        <h1>🎮 Welcome to MemeMC Game Hub</h1>
+        <p>Explore our selection of fun and exciting games!</p>
     </div>
     <div class="game-gallery">
-        <div class="game-card" onclick="loadGame('game1')">
-            <div class="game-overlay"></div>
+        <div class="game-card" onclick="loadGame('game1')" title="Classic Connect Four game">
             <span class="game-title">Connect Four</span>
         </div>
-        <div class="game-card" onclick="loadGame('game2')">
-            <div class="game-overlay"></div>
+        <div class="game-card" onclick="loadGame('game2')" title="High-speed car drifting game">
             <span class="game-title">Drift Hunters</span>
         </div>
-        <div class="game-card" onclick="loadGame('game3')">
-            <div class="game-overlay"></div>
+        <div class="game-card" onclick="loadGame('game3')" title="Relaxing fishing experience">
             <span class="game-title">Tiny Fishing</span>
         </div>
-        <div class="game-card" onclick="loadGame('game4')">
-            <div class="game-overlay"></div>
+        <div class="game-card" onclick="loadGame('game4')" title="Shoot enemies in Skibidi world">
             <span class="game-title">Skibidi Shooter</span>
         </div>
-        <div class="game-card" onclick="loadGame('game5')">
-            <div class="game-overlay"></div>
+        <div class="game-card" onclick="loadGame('game5')" title="Challenging parkour platformer">
             <span class="game-title">OvO</span>
         </div>
-        <div class="game-card" onclick="loadGame('game6')">
-            <div class="game-overlay"></div>
+        <div class="game-card" onclick="loadGame('game6')" title="Stickman merging battle game">
             <span class="game-title">Stick Merge</span>
         </div>
     </div>
