--- a/game/games.html
+++ b/game/games.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MemeMC | Play Game</title>
+    <title>MemeMC | Game Player</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="header">
+        <h1>🎮 MemeMC Game Player</h1>
+        <p>Enjoy your game!</p>
+    </div>
+
     <div class="game-container">
         <iframe id="gameFrame" src="" frameborder="0" allowfullscreen></iframe>
     </div>
+
     <button class="back-button" onclick="goBack()">⬅️ Back to Games List</button>
+
+    <footer>
+        <p>© 2024 MemeMC. All Rights Reserved.</p>
+    </footer>
+
     <script src="js/games.js"></script>
 </body>
 </html>
