--- a/game/games.html
+++ b/game/games.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <h1>🎮 MemeMC Game Player</h1>
-        <p>Enjoy your game!</p>
+        <p>Enjoy your game session!</p>
     </div>
 
     <div class="game-container">
