--- a/game/index.html
+++ b/game/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="header">
         <h1>🎮 MemeMC Game Hub</h1>
-        <p>Choose a game and have fun!</p>
+        <p>Choose a game and enjoy endless fun!</p>
     </div>
+
     <div class="game-gallery">
         <div class="game-card" onclick="loadGame('game1')">
             <div class="game-overlay"></div>
@@ -37,10 +38,20 @@
             <div class="game-overlay"></div>
             <span class="game-title">Stick Merge</span>
         </div>
+        <div class="game-card" onclick="loadGame('game7')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Slope</span>
+        </div>
+        <div class="game-card" onclick="loadGame('game8')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Retro Bowl</span>
+        </div>
     </div>
+
     <footer>
         <p>© 2024 MemeMC. All Rights Reserved.</p>
     </footer>
+
     <script src="js/main.js"></script>
 </body>
 </html>
