--- a/game/index.html
+++ b/game/index.html
@@ -46,6 +46,10 @@
             <div class="game-overlay"></div>
             <span class="game-title">Retro Bowl</span>
         </div>
+        <div class="game-card" onclick="loadGame('game9')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Cluster Rush</span>
+        </div>
     </div>
 
     <footer>
