--- a/game/index.html
+++ b/game/index.html
@@ -50,6 +50,22 @@
             <div class="game-overlay"></div>
             <span class="game-title">Cluster Rush</span>
         </div>
+        <div class="game-card" onclick="loadGame('game10')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Burrito Bison</span>
+        </div>
+        <div class="game-card" onclick="loadGame('game11')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Rooftop Snipers</span>
+        </div>
+        <div class="game-card" onclick="loadGame('game12')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Basketball Random</span>
+        </div>
+        <div class="game-card" onclick="loadGame('game13')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Soccer Random</span>
+        </div>
     </div>
 
     <footer>
