--- a/game/index.html
+++ b/game/index.html
@@ -66,6 +66,10 @@
             <div class="game-overlay"></div>
             <span class="game-title">Soccer Random</span>
         </div>
+        <div class="game-card" onclick="loadGame('game14')">
+            <div class="game-overlay"></div>
+            <span class="game-title">MonkeyMart</span>
+        </div>
     </div>
 
     <footer>
