--- a/game/index.html
+++ b/game/index.html
@@ -70,6 +70,10 @@
             <div class="game-overlay"></div>
             <span class="game-title">MonkeyMart</span>
         </div>
+        <div class="game-card" onclick="loadGame('game15')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Cookie Clicker</span>
+        </div>
     </div>
 
     <footer>
