--- a/game/index.html
+++ b/game/index.html
@@ -74,6 +74,10 @@
             <div class="game-overlay"></div>
             <span class="game-title">Cookie Clicker</span>
         </div>
+        <div class="game-card" onclick="loadGame('game16')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Stickman Hook</span>
+        </div>
     </div>
 
     <footer>
