--- a/game/index.html
+++ b/game/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="fade-in">
     <div class="header">
         <h1>🎮 MemeMC Game Hub</h1>
         <p>Choose a game and enjoy endless fun!</p>
