--- a/game/index.html
+++ b/game/index.html
@@ -79,6 +79,10 @@
             <div class="game-overlay"></div>
             <span class="game-title">N-Gon</span>
         </div>
+        <div class="game-card" onclick="loadGame('game18')">
+            <div class="game-overlay"></div>
+            <span class="game-title">Gun Spin</span>
+        </div>
     </div>
 
     <footer>
