--- a/math/index.html
+++ b/math/index.html
@@ -11,7 +11,12 @@
 <nav>
     <div class="nav-container">
         <h1>Math Mastery</h1>
-        <a href="#" id="restart-link">Restart Quiz</a>
+        <div class="nav-links">
+            <a href="#" id="grade-7-link">7th Grade</a>
+            <a href="#" id="grade-8-link">8th Grade</a>
+            <a href="#" id="grade-9-link">9th Grade</a>
+            <a href="#" id="restart-link">Restart Quiz</a>
+        </div>
     </div>
 </nav>
 <div class="main-container">
