--- a/math/index.html
+++ b/math/index.html
@@ -3,69 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Mastery Quiz</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+    <title>Math Learning Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <h1>Math Mastery</h1>
+        <ul class="nav-links">
+            <li id="select-grade">Select Grade</li>
+            <li id="mastery-tracker">Mastery</li>
+        </ul>
+    </nav>
+
     <!-- Home Screen -->
-    <div id="home-screen" class="home-screen">
-        <h1>Welcome to Math Mastery</h1>
-        <p>Select your grade to start the quiz!</p>
-        <div class="home-screen-buttons">
-            <div class="grade-card" id="home-grade-7">7th Grade</div>
-            <div class="grade-card" id="home-grade-8">8th Grade</div>
-            <div class="grade-card" id="home-grade-9">9th Grade</div>
+    <div id="home-screen">
+        <h2>Choose Your Grade</h2>
+        <div class="grade-buttons">
+            <button class="grade-button" data-grade="1">1st Grade</button>
+            <button class="grade-button" data-grade="2">2nd Grade</button>
+            <button class="grade-button" data-grade="3">3rd Grade</button>
+            <button class="grade-button" data-grade="4">4th Grade</button>
+            <button class="grade-button" data-grade="5">5th Grade</button>
+            <button class="grade-button" data-grade="6">6th Grade</button>
+            <button class="grade-button" data-grade="7">7th Grade</button>
+            <button class="grade-button" data-grade="8">8th Grade</button>
+            <button class="grade-button" data-grade="9">9th Grade</button>
         </div>
+    </div>
+
+    <!-- Skills Screen -->
+    <div id="skills-screen" class="hidden">
+        <h2>Select a Skill</h2>
+        <div class="skills-list" id="skills-list"></div>
+        <button id="back-to-home">Back</button>
     </div>
 
     <!-- Quiz Screen -->
-    <div id="quiz-screen" class="quiz-screen">
-        <nav>
-            <div class="nav-container">
-                <h1>Math Mastery</h1>
-                <div class="nav-links">
-                    <div class="dropdown">
-                        <button class="dropbtn" id="select-grade">Select Grade</button>
-                        <div class="dropdown-content">
-                            <div class="grade-card" id="grade-7">7th Grade</div>
-                            <div class="grade-card" id="grade-8">8th Grade</div>
-                            <div class="grade-card" id="grade-9">9th Grade</div>
-                        </div>
-                    </div>
-                    <a href="#" id="restart-link">Restart Quiz</a>
-                </div>
-            </div>
-        </nav>
-        <div class="main-container">
-            <div class="quiz-container">
-                <h2 id="question-text">Loading question...</h2>
-                <input type="number" id="user-answer" placeholder="Enter your answer">
-                <button id="submit-button">Submit</button>
-                <p id="feedback"></p>
-                <div id="progress-bar-container">
-                    <div id="progress-bar"></div>
-                </div>
-                <div id="progress-container">
-                    <p>Question <span id="current-question-number">1</span> of <span id="total-questions"></span></p>
-                </div>
-                <div id="timer-container">
-                    <p id="timer">Time Left: 60</p>
-                </div>
-            </div>
+    <div id="quiz-screen" class="hidden">
+        <h2 id="question-text"></h2>
+        <input type="text" id="user-answer" placeholder="Enter your answer">
+        <button id="submit-button">Submit</button>
+        <p id="feedback"></p>
+        <div id="progress-bar-container">
+            <div id="progress-bar"></div>
         </div>
-    </div>
-
-    <!-- Grade Selection Modal -->
-    <div id="grade-selection-modal" class="modal">
-        <div class="modal-content">
-            <h2>Select Your Grade</h2>
-            <div class="grade-cards">
-                <div class="grade-card" id="grade-7-modal">7th Grade</div>
-                <div class="grade-card" id="grade-8-modal">8th Grade</div>
-                <div class="grade-card" id="grade-9-modal">9th Grade</div>
-            </div>
-        </div>
+        <p id="timer"></p>
     </div>
 
     <script src="script.js"></script>
