--- a/game/index.html
+++ b/game/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <footer>
-        <p>© 2024 MemeMC. All Rights Reserved.</p>
+        <p>© 2024 MemeMC. All Rights Reserved</p>
     </footer>
 
     <script src="js/main.js"></script>
