--- a/game/games.html
+++ b/game/games.html
@@ -18,7 +18,7 @@
         <iframe id="gameFrame" src="" frameborder="0" allowfullscreen></iframe>
     </div>
 
-    <!-- Button Container! -->
+    <!-- Button Container -->
     <div class="button-container">
         <button class="back-button" onclick="goBack()">⬅️ Back to Games List</button>
         <button class="fullscreen-button" onclick="toggleFullScreen()">🔲 Full Screen</button>
