--- a/game/games.html
+++ b/game/games.html
@@ -20,8 +20,8 @@
 
     <!-- Button Container -->
     <div class="button-container">
-        <button class="back-button" onclick="goBack()">⬅️ Back to Games List</button>
-        <button class="fullscreen-button" onclick="toggleFullScreen()">🔲 Full Screen</button>
+        <button class="nav-button" onclick="goBack()">⬅️ Back to Games List</button>
+        <button class="nav-button" onclick="toggleFullScreen()">🔲 Full Screen</button>
     </div>
 
     <footer>
