--- a/game/games.html
+++ b/game/games.html
@@ -21,7 +21,7 @@
     <!-- Button Container -->
     <div class="button-container">
         <button class="nav-button" onclick="goBack()">⬅️ Back to Games List</button>
-        <button class="nav-button" onclick="toggleFullScreen()">🔲 Full Screen</button>
+        <button class="nav-button" onclick="toggleFullScreen()">⛶ Full Screen</button>
     </div>
 
     <footer>
