--- a/game/test/games.html
+++ b/game/test/games.html
@@ -9,9 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1 id="gameTitle"></h1>
     <div class="game-container">
+        <button id="backToList" class="nav-button">🔙 Back to Game List</button>
+        <button id="fullscreenToggle" class="nav-button">🖥️ Fullscreen</button>
         <iframe id="gameFrame" width="100%" height="600"></iframe>
-        <h1 id="gameTitle"></h1>
 
         <div id="reviewsContainer">
             <h2>Game Reviews</h2>
