--- a/game/test/games.html
+++ b/game/test/games.html
@@ -9,18 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="gameTitle"></h1>
-    <div class="game-container">
-        <button id="backToList" class="nav-button">🔙 Back to Game List</button>
-        <button id="fullscreenToggle" class="nav-button">🖥️ Fullscreen</button>
-        <iframe id="gameFrame" width="100%" height="600"></iframe>
+    <main class="game-page">
+        <h1 id="gameTitle"></h1>
+        <div class="game-container">
+            <button id="backToList" class="nav-button">🔙 Back to Game List</button>
+            <button id="fullscreenToggle" class="nav-button">🖥️ Fullscreen</button>
+            <iframe id="gameFrame" width="100%" height="600"></iframe>
 
-        <div id="reviewsContainer">
-            <h2>Game Reviews</h2>
-            <button onclick="submitReview(game.id)">Leave a Review</button>
-            <div id="reviews"></div>
+            <div id="reviewsContainer" class="reviews-section">
+                <h2>Game Reviews</h2>
+                <button onclick="submitReview(game.id)" class="review-btn">Leave a Review</button>
+                <div id="reviews"></div>
+            </div>
         </div>
-    </div>
+    </main>
 
     <footer>
         <p>© 2024 MemeMC. All Rights Reserved.</p>
