--- a/game/test/index.html
+++ b/game/test/index.html
@@ -9,19 +9,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body class="fade-in">
-    <div class="header">
+    <header class="header">
         <h1>🎮 MemeMC Game Hub</h1>
-        <button id="darkModeToggle">Toggle Dark Mode</button>
-        <input type="text" id="searchBar" placeholder="Search games...">
+        <div class="header-actions">
+            <button id="darkModeToggle" class="nav-button">Toggle Dark Mode</button>
+            <input type="text" id="searchBar" class="search-bar" placeholder="Search games...">
+        </div>
         <p>Choose a game and enjoy endless fun!</p>
-    </div>
+    </header>
 
-    <div id="recentlyPlayed" class="recently-played">
+    <section id="recentlyPlayed" class="recently-played">
         <h2>Recently Played</h2>
         <ul id="recentlyPlayedList"></ul>
-    </div>
+    </section>
 
-    <div class="game-gallery" id="gameGallery"></div>
+    <section class="game-gallery" id="gameGallery"></section>
 
     <footer>
         <p>© 2024 MemeMC. All Rights Reserved.</p>
