--- a/game/index.html
+++ b/game/index.html
@@ -69,6 +69,10 @@
         </div>
         <div class="game-card" onclick="loadGame('game14')">
             <div class="game-overlay"></div>
+            <span class="game-title">Boxing Random</span>
+        </div>
+        <div class="game-card" onclick="loadGame('game15')">
+            <div class="game-overlay"></div>
             <span class="game-title">MonkeyMart</span>
         </div>
         <div class="game-card" onclick="loadGame('game16')">
