--- a/kool/imgroll1/index.html
+++ b/kool/imgroll1/index.html
@@ -37,10 +37,10 @@
 </head>
 <body>
     <div class="slider">
-        <img src="image1.jpg" class="active" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
-        <img src="image4.jpg" alt="Image 4">
+        <img src="image1.png" class="active" alt="Image 1">
+        <img src="image2.png" alt="Image 2">
+        <img src="image3.png" alt="Image 3">
+        <img src="image4.png" alt="Image 4">
     </div>
 
     <script>
