--- a/kool/imgroll1/index.html
+++ b/kool/imgroll1/index.html
@@ -37,9 +37,10 @@
 </head>
 <body>
     <div class="slider">
-        <img src="image1.png" class="active" alt="Image 1">
-        <img src="image2.png" alt="Image 2">
-        <img src="image3.png" alt="Image 3">
+        <img src="1.png" class="active" alt="Image 1">
+        <img src="2.gif" alt="Image 2">
+        <img src="3.png" alt="Image 3">
+        <img src="4.png" alt="Image 4">
     </div>
 
     <script>
